--- a/src/init/action.yml.liquid
+++ b/src/init/action.yml.liquid
@@ -42,6 +42,8 @@ jobs:
       {% elsif package_manager == "pnpm" %}
       - name: Install pnpm
         uses: pnpm/action-setup@v4
+        with:
+          version: 9.15.0
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
